Stylize features section and incompletely stylize header section
Update text in index file to match that of screenshot. Add styles for header and features section including but not limited to:
* Background color
* Flex containers to adjust layout
* Styling of text
* Adding styles to lists and links
* Margins and paddings to format text

--- a/index.html
+++ b/index.html
@@ -15,26 +15,30 @@
 
         <div class="right-links">
           <ul>
-            <li> Right Link One</li>
-            <li> Right Link Two</li>
-            <li> Right Link Three</li>
+            <li> <a href=""> Right Link One </a> </li>
+            <li> <a href=""> Right Link Two </a> </li>
+            <li> <a href=""> Right Link Three </a> </li>
           </ul>
         </div>
       </div>
 
       <div class="info">
         <div class="text">
-          This website is awesome <br>
-          <span class="sub-text"> This website has some subtext that goes under main text.
-            It's smaller font and the contrast is also lower. </span>
+          <div class="title">  This website is awesome  </div>
+          <div class="sub-text"> This website has some subtext that goes under main text.
+            It's smaller font and the contrast is also lower. </div>
+
+          <div> <a class="sign-up"> Sign up </a> </div>
         </div>
 
-        <div class="image"></div>
+        <div class="image">
+          <p> this is a placeholder for an image </p>
+        </div>
       </div>
     </div>
 
     <div class="features">
-      <div class="title"> Some Random Information. </div>
+      <div class="title"> Some random information. </div>
 
       <div class="cards">
         <div class="card">
