Stylize the sign-up footer section along with copyright section
Add styles to footer div to center the contained card. Declare the card div as flex-box and add proper spacing. Define font sizes for each section.

--- a/index.html
+++ b/index.html
@@ -73,19 +73,19 @@
         it looks nice.
       </div>
 
-      <div class="quote-source">-Thor, God of Thunder</div>
+      <div class="quote-source"> - Thor, God of Thunder </div>
     </div>
 
     <div class="footer">
       <div class="card">
         <div class="text">
-          Call to action! It's time!
-          <span class="sub-text"> Sign up for our product by clicking that button right over there! </span>
+          <div class="title"> Call to action! It's time! </div>
+          <div class="sub-text"> Sign up for our product by clicking that button right over there! </div>
         </div>
-        <div class="button"></div>
+        <div class="sign-up"> Sign up </div>
       </div>
-
-      <div class="copyright"> Copyright The Odin Project 2021 </div>
     </div>
+
+    <div class="copyright"> Copyright © The Odin Project 2021 </div>
   </body>
 </html>
