Update header styles to match requirements
Change button element to use <button> tag instead of <a> anchor tag. Add margin to give it some space to separate it from the text. Disable button's default border.
< iteration#1 Complete >

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <div class="sub-text"> This website has some subtext that goes under main text.
             It's smaller font and the contrast is also lower. </div>
 
-          <div> <a class="sign-up"> Sign up </a> </div>
+          <div> <button class="sign-up"> Sign up </button> </div>
         </div>
 
         <div class="image">
